# kraken-chatbot

./: .gitignore  .gitleaksignore  .replit  AGENT-TASK-dev-branch.md  AGENT-TASK-kestrel-api-depth.md  AGENT-TASK-model-usages.md  AGENT-TASK-temporal-eval-port.md  AGENT_PROMPT_phenome_ui_overhaul.md  CLAUDE.md  LICENSE  MIGRATION_IMPLEMENTATION.md  MULTI_HOP_INTEGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  package-lock.json  package.json  replit.md
backend/: .env.example  .gitignore  AUTH_README.md  README.md  alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_baseline_schema.py  002_add_users_table.py  003_add_feedback_table.py
backend/assessment_data/: BRIDGE_GROUNDING_TIER_A_FINDINGS.md  BRIDGE_GROUNDING_V2_FINDINGS.md  _module_wiki_gen.py  bridge_grounding_eval.py  bridge_grounding_tier_a.py  brown_c1_pilot_e2e.py  frailty_expected_curies.json  generate_frailty_prompts.py  kg_bridge_graded_probe.py  kg_bridge_leg_probe.py  kg_provenance_probe.py  queries.json  unit0_pinned_query.json
backend/assessment_data/assessment_runs/: assessment_20260618T230039Z.json  assessment_20260618T234405Z.json
backend/assessment_data/schema/: example.json
backend/src/kestrel_backend/: __init__.py  agent.py  auth.py  bash_sandbox.py  biomapper_client.py  clerk_auth.py  clerk_proxy.py  config.py  database.py  exa_client.py  kestrel_client.py  kestrel_tools.py  literature_utils.py  local_tools.py  logging_config.py  main.py  mcp_proxy.py  models.py  openalex.py  pricing.py  protocol.py  pubmed_client.py  run_reports_io.py  semantic_scholar.py  writing_style.py
backend/src/kestrel_backend/assessment/: __init__.py  capture.py  cassette.py  checks.py  report.py  runner.py  scorer.py  variance.py
backend/src/kestrel_backend/bridge_grounding/: __init__.py  labeling.py  panel.py  prompts.py  provenance.py  retrieval.py  scoring.py
backend/src/kestrel_backend/graph/: __init__.py  builder.py  node_detail_extractors.py  performance_report.py  pipeline_config.py  runner.py  sdk_utils.py  (+5 more)
backend/tests/: conftest.py  recall_gate.py  test_assessment_capture.py  test_assessment_checks.py  test_assessment_runner.py  test_assessment_schema.py  test_assessment_scorer.py  test_assessment_variance.py  test_auth.py  test_biomapper_client.py  test_biomapper_eval.py  test_bridge_grounding_labeling.py  test_bridge_grounding_models.py  test_bridge_grounding_node.py  test_bridge_grounding_panel.py  test_bridge_grounding_prompts.py  test_bridge_grounding_retrieval.py  test_bridge_grounding_scoring.py  test_bridge_provenance.py  test_cassette_spike.py  test_cold_start_performance.py  test_config.py  test_database_integration.py  test_depth_demo_slice.py  test_entity_resolution_biomapper.py  test_entity_resolution_category.py  test_fallback_observability.py  test_feedback.py  test_frailty_benchmark_prompts.py  test_health_checks.py  test_hypothesis_extraction.py  test_intake.py  test_intake_name_parsing.py  test_kestrel_parse.py  test_langgraph_prototype.py  test_langgraph_prototype.py.bak  test_langgraph_prototype.py.phase4b  test_literature_grounding.py  test_logging.py  test_migration_setup.py  (+23 more)
backend/tests/code_on_graph_spike/: __init__.py  anchors.py  baseline.py  config.py  crosswalk.py  drugmechdb.py  gate_recall.py  gold_set.py  iterate_loop.py  kestrel_rest.py  pilot.py  recall_scorer.py  run_phase0.py  test_anchors.py  test_baseline.py  test_config.py  test_crosswalk.py  test_drugmechdb.py  test_gold_set.py  test_iterate_loop.py  test_kestrel_rest.py  test_pilot.py  test_recall_gate.py  test_run_phase0.py
backend/tests/fixtures/: entity_resolution_hard_variants.json  entity_resolution_recall_results.md
(+370 files in other folders)
