[project]
name = "kestrel-backend"
version = "0.1.0"
description = "FastAPI backend for KRAKEN knowledge graph chat interface with Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel_backend"]
