[project]
name = "kestrel-backend"
version = "0.1.0"
description = "FastAPI backend for KRAKEN knowledge graph chat interface with Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "langfuse>=2.0.0",
    "asyncpg>=0.31.0",
    "langgraph>=0.2.0",
    "python-json-logger>=2.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests requiring external services (PostgreSQL via testcontainers)",
    "e2e: marks end-to-end tests requiring full system (WebSocket, database)",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel_backend"]
