[project]
name = "kestrel-backend"
version = "0.1.0"
description = "FastAPI backend for KRAKEN knowledge graph chat interface with Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.0.0",
    "langchain>=0.3.0",  # required by langfuse.langchain.CallbackHandler (not bundled with langchain-core)
    "asyncpg>=0.31.0",
    "langgraph>=0.2.0",
    "python-json-logger>=2.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT[crypto]>=2.8.0",
    "ftfy>=6.3.1",
    "defusedxml>=0.7.1",  # safe parsing of PubMed EFetch XML (XXE / billion-laughs)
    "biomapper>=1.2.1",  # namespace/species-correct entity resolution (>=1.2.1 for entity_type support)
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.0.0",
    "httpx>=0.27.0",
    "respx>=0.22.0",
    "scipy>=1.14.0", # Used by PR5 scorer (Spearman correlation)
    "langgraph-cli[inmem]>=0.4.24",
    "statsmodels>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests requiring external services (PostgreSQL via testcontainers)",
    "e2e: marks end-to-end tests requiring full system (WebSocket, database)",
]
testpaths = ["tests"]
filterwarnings = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel_backend"]
